# pypackage-boilerplate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
