[tool.poetry]
name = "template"
version = "0.01"
description = "Description here"
authors = []
classifiers = []
readme = "README.md"
homepage = ""
documentation = ""

[tool.poetry.dependencies]
python = "^3.6.1"

pre-commit = {version = "^1.17", optional = true}
autodocsumm = {version = "^0.1.11", optional = true}
recommonmark = {version = "^0.6.0", optional = true}
nbsphinx = {version = "^0.4.2", optional = true}
sphinx_autodoc_typehints = {version = "^1.8", optional = true}
sphinx-jsonschema = {version = "^1.11", optional = true}
sphinx = {version = "^2.2", optional = true}
sphinx-bootstrap-theme = {version = "^0.7.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.0"

[tool.poetry.extras]
documentation = ["nbsphinx", "sphinx_autodoc_typehints", "sphinx-jsonschema", "sphinx", "sphinx-bootstrap-theme"]
styling = ["pre-commit"]

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
